# lib/api-spec/openapi.yaml
@@ -378,12 +378,18 @@ components:
           type: integer
         role:
           type: string
+        company:
+          type: string
         skills:
           type: array
           items:
             type: string
         experienceLevel:
           type: string
+        responsibilities:
+          type: array
+          items:
+            type: string
         rawText:
           type: string
         createdAt:
@@ -392,8 +398,10 @@ components:
       required:
         - id
         - role
+        - company
         - skills
         - experienceLevel
+        - responsibilities
         - rawText
         - createdAt
 
